@@ -1,0 +1,542 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. David, D. Disnan, A. Lardschneider, D. Wacht, H. Hoang, G. Ramer, H. Detz, B. Lendl, U. Schmid, G. Strasser, B. Hinkov. Structure and mid-infrared optical properties of spin-coated polyethylene films developed for integrated photonics applications, <a href=\"https://doi.org/10.1364/OME.458667\"><i>Opt. Mater. Express</i> <b>12</b>, 2168-2180 (2022)</a>"
+COMMENTS: "Spin-coated LLDPE. Measured using approximately 270 nm thick film (concentration 2%, dissolved in Toluene)"
+DATA:
+  - type: tabulated nk
+    data: |
+        1.619778 1.557220 0.012923
+        1.639756 1.559886 0.014332
+        1.659968 1.563746 0.015252
+        1.679866 1.567874 0.015776
+        1.699970 1.572950 0.015505
+        1.719989 1.579049 0.015114
+        1.739902 1.585471 0.015243
+        1.759982 1.591635 0.015952
+        1.779920 1.598371 0.016259
+        1.799690 1.606055 0.015646
+        1.819905 1.614236 0.015383
+        1.839925 1.622464 0.016099
+        1.859723 1.631096 0.016158
+        1.879952 1.639957 0.014692
+        1.899930 1.649752 0.013683
+        1.919981 1.660353 0.013545
+        1.939734 1.671284 0.013375
+        1.959897 1.683056 0.012807
+        1.979728 4.791272 0.000000
+        1.999965 1.333523 0.000000
+        2.019832 1.344924 0.000000
+        2.039697 1.357032 0.000000
+        2.059956 1.363632 0.000000
+        2.079787 1.366650 0.000000
+        2.099578 1.369976 0.000000
+        2.119750 1.376667 0.000000
+        2.139871 1.383447 0.000000
+        2.159928 1.390119 0.000000
+        2.179907 1.396364 0.000000
+        2.199792 1.401048 0.000000
+        2.219567 1.404139 0.000000
+        2.239701 1.408610 0.000000
+        2.259712 1.412917 0.000000
+        2.279582 1.416836 0.000000
+        2.299804 1.416437 0.000000
+        2.319870 1.415781 0.000000
+        2.339760 1.419396 0.000000
+        2.359995 1.423174 0.000000
+        2.379490 1.426087 0.000000
+        2.399865 1.428584 0.000000
+        2.419463 1.430832 0.000000
+        2.439957 1.434880 0.000000
+        2.459634 1.439319 0.000000
+        2.479631 1.440385 0.000000
+        2.499956 1.441203 0.000000
+        2.519392 1.443345 0.000000
+        2.539754 1.446169 0.000000
+        2.559817 1.448115 0.000000
+        2.579557 1.449565 0.000000
+        2.599603 1.450272 0.000000
+        2.619964 1.451346 0.000000
+        2.639973 1.451893 0.000000
+        2.659609 1.453682 0.000000
+        2.679539 1.455682 0.000000
+        2.699770 1.456850 0.000000
+        2.719595 1.457453 0.000000
+        2.739714 1.458587 0.000000
+        2.759398 1.460138 0.000000
+        2.779367 1.460482 0.000000
+        2.799627 1.460454 0.000000
+        2.819417 1.460768 0.000000
+        2.839490 1.460683 0.000000
+        2.859850 1.461170 0.000000
+        2.879705 1.463230 0.000000
+        2.899837 1.464212 0.000234
+        2.919430 1.464274 0.000172
+        2.939290 1.464026 0.000000
+        2.959423 1.464198 0.000000
+        2.979833 1.464924 0.000000
+        2.999657 1.465281 0.000266
+        3.019749 1.465458 0.000691
+        3.039220 1.465382 0.000124
+        3.059845 1.466809 0.000813
+        3.079839 1.467412 0.002114
+        3.099168 1.466981 0.002600
+        3.119680 1.465299 0.001769
+        3.139514 1.464470 0.002257
+        3.159603 1.463889 0.002718
+        3.179950 1.462965 0.002522
+        3.199573 1.461914 0.003040
+        3.219440 1.460827 0.004019
+        3.239556 1.459026 0.004307
+        3.259923 1.455046 0.003797
+        3.279512 1.450959 0.003985
+        3.299337 1.447082 0.005385
+        3.319404 1.440126 0.006820
+        3.339716 1.427394 0.009258
+        3.359189 1.410867 0.018289
+        3.379993 1.384347 0.042343
+        3.399940 1.371296 0.099345
+        3.418996 1.425377 0.173690
+        3.439408 1.547356 0.162501
+        3.458911 1.563162 0.084600
+        3.479804 1.523963 0.071419
+        3.499770 1.532920 0.093967
+        3.519965 1.582231 0.074763
+        3.539187 1.583823 0.030669
+        3.559841 1.557092 0.011794
+        3.579502 1.543970 0.009169
+        3.599382 1.537133 0.008555
+        3.619482 1.531742 0.007726
+        3.639810 1.527536 0.006950
+        3.659074 1.525227 0.007093
+        3.679850 1.524120 0.008287
+        3.699542 1.522738 0.008811
+        3.719447 1.521141 0.008942
+        3.739566 1.519640 0.008914
+        3.759905 1.518512 0.008646
+        3.779088 1.517967 0.008772
+        3.799860 1.517261 0.008376
+        3.819453 1.516636 0.007734
+        3.839251 1.516285 0.007571
+        3.859255 1.515486 0.006941
+        3.879468 1.515308 0.007044
+        3.899893 1.515824 0.007843
+        3.919054 1.515725 0.007760
+        3.939901 1.515588 0.007522
+        3.959457 1.515865 0.008179
+        3.979208 1.515973 0.008990
+        3.999159 1.515443 0.008206
+        4.019309 1.514856 0.007324
+        4.039663 1.514847 0.007346
+        4.058638 1.515059 0.007458
+        4.079393 1.514815 0.007382
+        4.098742 1.514630 0.007358
+        4.119911 1.514251 0.007324
+        4.139647 1.513606 0.006631
+        4.159573 1.513716 0.006243
+        4.179692 1.514739 0.007477
+        4.198306 1.515949 0.009736
+        4.218802 1.515584 0.010157
+        4.239500 1.514701 0.009980
+        4.258652 1.514534 0.009853
+        4.279743 1.514790 0.009772
+        4.299261 1.515192 0.009674
+        4.318957 1.515938 0.009597
+        4.338835 1.515991 0.009143
+        4.358898 1.515697 0.008585
+        4.379145 1.515515 0.007932
+        4.399582 1.515417 0.007073
+        4.418329 1.515719 0.007560
+        4.439133 1.516322 0.008703
+        4.458219 1.516193 0.008656
+        4.479404 1.516117 0.008590
+        4.498836 1.515928 0.007983
+        4.518438 1.515698 0.007251
+        4.538214 1.515920 0.007788
+        4.558161 1.516606 0.008869
+        4.578285 1.517263 0.009365
+        4.598589 1.517246 0.008771
+        4.619072 1.517122 0.008010
+        4.639740 1.517774 0.008893
+        4.658497 1.517816 0.008565
+        4.679521 1.517115 0.007181
+        4.698603 1.516847 0.006580
+        4.719989 1.517139 0.006953
+        4.739404 1.517731 0.007723
+        4.758979 1.517749 0.007198
+        4.778717 1.517320 0.006102
+        4.798619 1.516571 0.004366
+        4.818687 1.516840 0.004231
+        4.838927 1.518108 0.005843
+        4.859332 1.519123 0.007617
+        4.879913 1.518927 0.007458
+        4.898354 1.518719 0.007283
+        4.919267 1.519746 0.008549
+        4.938008 1.520595 0.008990
+        4.959262 1.520665 0.008927
+        4.978310 1.520472 0.007792
+        4.999913 1.520495 0.006372
+        5.019271 1.521702 0.007810
+        5.038784 1.521853 0.008269
+        5.058448 1.521615 0.008159
+        5.078264 1.521538 0.007984
+        5.098238 1.521163 0.006901
+        5.118370 1.521035 0.006321
+        5.138662 1.521434 0.007058
+        5.159112 1.521213 0.006971
+        5.179729 1.521710 0.007144
+        5.197902 1.522582 0.006696
+        5.218831 1.523174 0.006009
+        5.239928 1.522900 0.005964
+        5.258528 1.522997 0.006391
+        5.279948 1.523722 0.007387
+        5.298833 1.524213 0.007763
+        5.317853 1.524114 0.007039
+        5.339761 1.524832 0.006941
+        5.359080 1.525046 0.006566
+        5.378536 1.524138 0.005337
+        5.398134 1.523564 0.004638
+        5.417878 1.524024 0.005552
+        5.437765 1.523676 0.005701
+        5.457797 1.523758 0.005503
+        5.477981 1.524619 0.005907
+        5.498312 1.524891 0.005713
+        5.518794 1.524488 0.004687
+        5.539433 1.524845 0.005038
+        5.557244 1.525459 0.006039
+        5.578169 1.525619 0.006250
+        5.599255 1.525219 0.005280
+        5.617454 1.525486 0.005225
+        5.638835 1.525282 0.005368
+        5.657293 1.525000 0.005488
+        5.678979 1.525973 0.005153
+        5.697701 1.526245 0.004598
+        5.719701 1.526386 0.005195
+        5.738693 1.526539 0.005615
+        5.757811 1.527148 0.005412
+        5.777058 1.527764 0.005070
+        5.799673 1.527810 0.004791
+        5.819201 1.526995 0.004408
+        5.838860 1.526097 0.004288
+        5.858653 1.525738 0.003843
+        5.878580 1.525077 0.003477
+        5.898644 1.524693 0.003827
+        5.918844 1.524617 0.003728
+        5.939184 1.525829 0.004178
+        5.959664 1.526292 0.004288
+        5.976840 1.526505 0.003924
+        5.997581 1.527027 0.004291
+        6.018466 1.528129 0.005337
+        6.039497 1.528566 0.005773
+        6.057137 1.528113 0.005443
+        6.078440 1.527968 0.005251
+        6.099893 1.526983 0.004337
+        6.117884 1.525812 0.003279
+        6.139617 1.524911 0.002228
+        6.157848 1.524926 0.001475
+        6.179866 1.526205 0.002467
+        6.198337 1.526078 0.003221
+        6.216918 1.525998 0.003615
+        6.239362 1.526780 0.003978
+        6.258186 1.524448 0.002099
+        6.277129 1.523654 0.000962
+        6.296186 1.523738 0.000467
+        6.319207 1.525563 0.001680
+        6.338517 1.526667 0.002540
+        6.357950 1.526880 0.002779
+        6.377502 1.527405 0.002744
+        6.397171 1.527445 0.002275
+        6.416965 1.526361 0.002195
+        6.436883 1.524904 0.002011
+        6.456924 1.525010 0.002795
+        6.477087 1.524288 0.003428
+        6.497380 1.523363 0.002470
+        6.517800 1.523863 0.002170
+        6.538345 1.524067 0.002556
+        6.559024 1.523609 0.002403
+        6.579835 1.521997 0.001594
+        6.596576 1.520289 0.001188
+        6.617626 1.519277 0.001719
+        6.638806 1.518256 0.002670
+        6.655853 1.516330 0.002344
+        6.677279 1.514237 0.001681
+        6.698848 1.511263 0.001922
+        6.716201 1.507546 0.002438
+        6.738022 1.500805 0.004091
+        6.759986 1.489327 0.012762
+        6.777658 1.484463 0.030554
+        6.799881 1.494153 0.056079
+        6.817762 1.512140 0.070157
+        6.835737 1.538224 0.076637
+        6.858344 1.563647 0.055650
+        6.876539 1.564276 0.033582
+        6.899411 1.558579 0.021335
+        6.917825 1.555691 0.015991
+        6.936333 1.553286 0.012436
+        6.959611 1.550696 0.008634
+        6.978343 1.549753 0.005616
+        6.997176 1.550368 0.004044
+        7.016116 1.549214 0.003171
+        7.039928 1.547434 0.003381
+        7.059101 1.546002 0.003017
+        7.078373 1.543808 0.002002
+        7.097751 1.540674 0.000000
+        7.117240 1.538220 0.000000
+        7.136832 1.537999 0.000000
+        7.156531 1.539437 0.001246
+        7.176345 1.539341 0.002230
+        7.196264 1.536764 0.002222
+        7.216293 1.533922 0.003758
+        7.236440 1.532823 0.007736
+        7.256694 1.536034 0.011744
+        7.277067 1.539844 0.008855
+        7.297550 1.541673 0.006129
+        7.318148 1.542164 0.005597
+        7.338868 1.542863 0.005742
+        7.359700 1.542048 0.004763
+        7.375404 1.541687 0.004172
+        7.396444 1.543771 0.005787
+        7.417611 1.544812 0.005818
+        7.438893 1.542521 0.003312
+        7.454937 1.541763 0.001599
+        7.476434 1.542659 0.000459
+        7.498062 1.543228 0.001465
+        7.519809 1.541304 0.001509
+        7.536204 1.541090 0.001690
+        7.558173 1.541259 0.000776
+        7.574736 1.541224 0.001190
+        7.596937 1.539127 0.000000
+        7.619262 1.538646 0.000000
+        7.636094 1.538466 0.000000
+        7.658651 1.538539 0.000000
+        7.675663 1.539677 0.000961
+        7.698455 1.541121 0.001846
+        7.715639 1.541789 0.002312
+        7.738668 1.542096 0.002654
+        7.756032 1.542507 0.002045
+        7.779310 1.543404 0.002664
+        7.796858 1.542794 0.002084
+        7.814484 1.541422 0.000000
+        7.838109 1.539956 0.000000
+        7.855922 1.539952 0.000000
+        7.879798 1.540545 0.000000
+        7.897802 1.541757 0.000000
+        7.915889 1.542029 0.000000
+        7.934058 1.541268 0.000000
+        7.958419 1.539931 0.000000
+        7.976784 1.539229 0.000000
+        7.995235 1.539837 0.000000
+        8.019967 1.540177 0.000000
+        8.038618 1.539304 0.000000
+        8.057355 1.538601 0.000000
+        8.076181 1.538811 0.000676
+        8.095095 1.538844 0.000000
+        8.114097 1.538923 0.000000
+        8.139571 1.538199 0.000000
+        8.158790 1.537565 0.000000
+        8.178086 1.537441 0.000000
+        8.197487 1.537986 0.000000
+        8.216967 1.539447 0.000000
+        8.236554 1.540509 0.000000
+        8.256220 1.540555 0.000000
+        8.275994 1.539978 0.000000
+        8.295850 1.537971 0.000000
+        8.315815 1.536551 0.000000
+        8.335869 1.536655 0.000000
+        8.356020 1.536945 0.000000
+        8.376269 1.536391 0.000000
+        8.396616 1.535435 0.000000
+        8.417062 1.535406 0.000000
+        8.437608 1.535785 0.000000
+        8.458255 1.536927 0.000000
+        8.479003 1.537799 0.000000
+        8.499853 1.540818 0.000000
+        8.513805 1.541832 0.000000
+        8.534826 1.541525 0.000000
+        8.555952 1.538773 0.000000
+        8.577183 1.537986 0.000000
+        8.598519 1.538878 0.000000
+        8.619961 1.540119 0.000000
+        8.634318 1.540116 0.000000
+        8.655940 1.538157 0.000000
+        8.677671 1.537579 0.000000
+        8.699510 1.537312 0.000600
+        8.714134 1.537338 0.000420
+        8.736158 1.538910 0.000025
+        8.758293 1.538180 0.000000
+        8.773107 1.536167 0.000000
+        8.795438 1.535223 0.001269
+        8.817868 1.536799 0.000000
+        8.832892 1.537777 0.000000
+        8.855521 1.539884 0.000000
+        8.878267 1.541889 0.001505
+        8.893498 1.542325 0.003345
+        8.916439 1.542100 0.005238
+        8.939498 1.541322 0.006066
+        8.954941 1.540054 0.007372
+        8.978200 1.538938 0.003008
+        8.993768 1.537937 0.002238
+        9.017230 1.538950 0.003197
+        9.032942 1.539741 0.003785
+        9.056609 1.542067 0.000636
+        9.072459 1.545032 0.000000
+        9.096334 1.545372 0.000448
+        9.112315 1.544547 0.000000
+        9.136400 1.543833 0.000000
+        9.152531 1.542784 0.000000
+        9.176829 1.542236 0.001003
+        9.193103 1.542644 0.001530
+        9.217618 1.541072 0.000000
+        9.234028 1.538983 0.000000
+        9.258762 1.538274 0.000000
+        9.275328 1.538870 0.000000
+        9.291953 1.540897 0.000000
+        9.316999 1.542895 0.000000
+        9.333765 1.542576 0.000000
+        9.359037 1.539289 0.000000
+        9.375964 1.537289 0.002264
+        9.392952 1.537129 0.003515
+        9.418546 1.540297 0.002666
+        9.435680 1.542214 0.002827
+        9.452886 1.541525 0.002455
+        9.478808 1.539738 0.001730
+        9.496171 1.540945 0.000000
+        9.513589 1.542739 0.000000
+        9.539855 1.538881 0.000000
+        9.557433 1.539074 0.000000
+        9.575086 1.541895 0.000000
+        9.592805 1.543700 0.000000
+        9.619501 1.539033 0.000000
+        9.637375 1.539793 0.000000
+        9.655324 1.539740 0.000000
+        9.673341 1.538858 0.000000
+        9.691416 1.538869 0.001876
+        9.718664 1.541811 0.000000
+        9.736918 1.542570 0.000236
+        9.755241 1.543843 0.001620
+        9.773623 1.544731 0.004308
+        9.792085 1.541981 0.002408
+        9.819903 1.539920 0.001040
+        9.838540 1.540688 0.004296
+        9.857238 1.542076 0.004777
+        9.876016 1.542876 0.000000
+        9.894867 1.541807 0.000000
+        9.913780 1.539386 0.000000
+        9.932775 1.539425 0.000768
+        9.951843 1.540499 0.000088
+        9.970974 1.540565 0.000000
+        9.999820 1.542173 0.000000
+        10.019150 1.543404 0.002535
+        10.038550 1.543701 0.004440
+        10.058010 1.542605 0.007033
+        10.077570 1.541396 0.005845
+        10.097200 1.538729 0.001065
+        10.116890 1.538145 0.000000
+        10.136670 1.539844 0.000000
+        10.156530 1.537774 0.000000
+        10.176460 1.537505 0.000000
+        10.196480 1.543108 0.000619
+        10.216570 1.547875 0.000000
+        10.236730 1.544993 0.000000
+        10.256990 1.541041 0.000000
+        10.277320 1.539747 0.002258
+        10.297730 1.541110 0.007691
+        10.318220 1.543080 0.007239
+        10.338800 1.542641 0.005542
+        10.359450 1.542242 0.005236
+        10.369820 1.541581 0.005755
+        10.390590 1.541486 0.005351
+        10.411460 1.543015 0.005773
+        10.432410 1.542977 0.005567
+        10.453440 1.542546 0.002787
+        10.474560 1.545178 0.001907
+        10.495770 1.546223 0.001832
+        10.517060 1.543624 0.003453
+        10.538430 1.541367 0.002462
+        10.559900 1.542061 0.000000
+        10.570660 1.543403 0.000000
+        10.592260 1.546102 0.000000
+        10.613940 1.545778 0.002694
+        10.635710 1.544665 0.001785
+        10.657570 1.541622 0.000000
+        10.679530 1.542913 0.000000
+        10.690530 1.544224 0.000000
+        10.712630 1.545789 0.000280
+        10.734800 1.547385 0.001003
+        10.757070 1.543492 0.004021
+        10.779440 1.540609 0.001652
+        10.790650 1.540577 0.000795
+        10.813160 1.543384 0.004143
+        10.835750 1.545648 0.007926
+        10.858450 1.544640 0.008263
+        10.869830 1.544151 0.009699
+        10.892660 1.543696 0.008415
+        10.915600 1.540736 0.004631
+        10.938620 1.537060 0.000000
+        10.950180 1.536745 0.000000
+        10.973350 1.543624 0.000000
+        10.996620 1.547070 0.002292
+        11.020000 1.540918 0.003686
+        11.031720 1.539470 0.003341
+        11.055250 1.539798 0.002414
+        11.078860 1.537343 0.004416
+        11.090720 1.538265 0.003008
+        11.114480 1.540766 0.000000
+        11.138360 1.542067 0.002687
+        11.150340 1.541666 0.004054
+        11.174370 1.542448 0.006531
+        11.198510 1.546389 0.008221
+        11.210610 1.546484 0.010656
+        11.234910 1.541606 0.009697
+        11.259300 1.541156 0.008277
+        11.271540 1.544477 0.007026
+        11.296090 1.551206 0.003340
+        11.308420 1.551150 0.002924
+        11.333130 1.544630 0.002610
+        11.357960 1.541158 0.005281
+        11.370410 1.544156 0.004597
+        11.395400 1.550529 0.000000
+        11.407930 1.551735 0.000000
+        11.433090 1.549803 0.000000
+        11.458360 1.548955 0.002038
+        11.471030 1.548477 0.004241
+        11.496470 1.545337 0.005808
+        11.509230 1.543543 0.003575
+        11.534840 1.542151 0.004195
+        11.547680 1.544239 0.002644
+        11.573460 1.550037 0.001889
+        11.599350 1.548744 0.006158
+        11.612340 1.548899 0.004793
+        11.638410 1.548240 0.002598
+        11.651480 1.547915 0.006017
+        11.677730 1.545721 0.008123
+        11.690890 1.544860 0.005681
+        11.717310 1.547475 0.007728
+        11.730560 1.548330 0.007954
+        11.757170 1.547257 0.002062
+        11.770510 1.543179 0.002017
+        11.797290 1.540349 0.003199
+        11.810730 1.543871 0.001548
+        11.837700 1.547926 0.004413
+        11.851220 1.549613 0.006372
+        11.878370 1.548218 0.004363
+        11.891990 1.546808 0.002220
+        11.919330 1.545810 0.002047
+        11.933050 1.545642 0.004135
+        11.946790 1.545001 0.005563
+        11.974380 1.544447 0.004669
+        11.988220 1.544458 0.007068
+        12.016010 1.542921 0.008026
+        12.029940 1.542809 0.009042
+        12.057930 1.542073 0.008401
+        12.071960 1.542486 0.005302
+        12.086040 1.549266 0.007316
+        12.114270 1.550542 0.007114
+        12.128450 1.552165 0.005753
+        12.156870 1.555822 0.003158
+        12.171150 1.555911 0.002344
+        12.199780 1.549581 0.007740
+        12.214160 1.547148 0.007544
+        12.228560 1.543411 0.002958
+        12.257470 1.535676 0.000000
