@@ -4,7 +4,7 @@ refractiveindex.info database is in the public domain
 copyright and related rights waived via CC0 1.0
 -->
 
-<h1>Polyethylene, (C<sub>2</sub>H<sub>4</sub>)<sub>n</sub> (PE, HDPE)</h1>
+<h1>Polyethylene, (C<sub>2</sub>H<sub>4</sub>)<sub>n</sub> (PE, HDPE, LDPE)</h1>
 
 Polyethylene is the most common plastic.
 
@@ -17,11 +17,18 @@ Polyethylene is the most common plastic.
 <h2>Variations</h2>
 <ul>
 <li>High-density polyethylene (HDPE)</li>
+<li>Medium-density polyethylene (MDPE)</li>
+<li>Low-density polyethylene (LDPE)</li>
+<li>Linear low-density polyethylene (LLDPE)</li>
+<li>Cross-linked polyethylene (XLPE/PEX)</li>
+<li>Ultra-high-molecular-weight polyethylene (UHMWPE)</li>
 </ul>
 
 <h2>External links</h2>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Polyethylene">Polyethylene - Wikipedia</a></li>
 <li><a href="https://en.wikipedia.org/wiki/High-density_polyethylene">High-density polyethylene - Wikipedia</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Low-density_polyethylene">Low-density polyethylene - Wikipedia</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Linear_low-density_polyethylene">Linear low-density polyethylene - Wikipedia</a></li>
 <li><a href="https://pslc.ws/macrog/pe.htm">Polyethylene - Polymer Science Learning Center</a></li>
 </ul>
